tooling/nargo_cli/tests/snapshots/execution_success/global_consts/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v11: [Field; 32], v12: [Field; 32], v13: [Field; 3], v14: [Field; 5]):
    (no terminator instruction)
}
